# terraform-aws-tf-registry-cli

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  doc.yml  package.yml  release.yml
aws_terraform_registry/: __init__.py  cli.py  config.py
aws_terraform_registry/common/: __init__.py  logger.py  matrix.py  model.py  publish.py  release.py  token.py
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: changelog.md  code_of_conduct.md  contributing.md  index.md  license.md  reference.md
license/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py  test_cli.py  test_config.py  test_publish.py  test_release.py  test_terraform_id.py  test_token.py
