[project]
name = "aws_terraform_registry"
version = "1.3.0"
description = "Python client tool for aws private terraform registry."
authors = [{ name = "Jerome Guibert", email = "jguibert@gmail.com" }]
readme = "README.md"
license = "MIT"
#license = {file = "LICENSE.md"} # setuptool bug
keywords = []
classifiers = [
    # update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11,<4"
license-files = ["LICENSE.md"]
dependencies = [
    "boto3 >= 1.26",
    "pyjwt >= 2.7, < 3",
    "pyyaml >= 6.0, < 7",
    "envclasses >= 0.3.1",
    "python-dotenv >= 1.0, < 2",
    "rich >= 13.0"
]

[project.urls]
homepage = "https://pypi.org/project/aws_terraform_registry"
documentation = "https://geronimo-iia.github.io/terraform-aws-tf-registry-cli/"
repository = "https://github.com/geronimo-iia/terraform-aws-tf-registry-cli"

[project.scripts]
tfr = "aws_terraform_registry.cli:main"

[dependency-groups]
dev =  [
    "ruff >= 0.9",
    "pyright >= 1.1.391",
    "pytest >= 9",
    "pytest-cov >= 7",
    "pytest-mock >= 3",
    "xdoctest >= 1.2, < 2",
    "coverage[toml] >= 7.13",
    "setuptools >= 82",
]
docs = [
    "mkdocs~= 1.6",
    "mkdocs-include-markdown-plugin >= 7.1.2",
    "mkdocstrings[python] ~= 0.27",
    "mkdocs-material == 9.*",
    "mkdocs-include-markdown-plugin >= 7.1.2,< 7.3.0",
]

[tool.setuptools]
packages = ["aws_terraform_registry"]

[tool.setuptools.package-data]
aws_terraform_registry = ["py.typed"]


[tool.uv]
package = true
cache-dir = "./.cache"
default-groups = ["dev", "docs"]


[tool.coverage.paths]
source = ["aws_terraform_registry"]

[tool.coverage.run]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
branch = true
data_file = ".cache/coverage"
source = ["aws_terraform_registry"]
omit = ["tests/*", ".venv/*", "*/__main__.py"]

[tool.coverage.report]
# see https://coverage.readthedocs.io/en/coverage-5.0.3/config.html
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --pdbcls=tests:Debugger -r sxX --cov=aws_terraform_registry --cov-report=html --cov-report=term-missing:skip-covered"
cache_dir = ".cache"

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.pyright]
include = ["aws_terraform_registry"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "aws_terraform_registry/experimental",
    "aws_terraform_registry/typestubs"
]
ignore = ["tests"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"


[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"




